--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
             </div>
 
             <nav>
-                <a href="index.html">Main Page</a>
+                <a href="/">Main Page</a>
                 <a href="all-articles.html">All Articles</a>
                 <form>
                     <input type="text">
@@ -26,8 +26,8 @@
         </aside>
         <div id="container">
             <header>
-                <a href="login.html">Login</a>
-                <a href="register.html">Register</a>
+                <a href="login">Login</a>
+                <a href="users/register">Register</a>
                 <span>Welcome, Bob!</span>
                 <a href="#">[Logout]</a>
             </header>
