--- a/views/register.ejs
+++ b/views/register.ejs
@@ -26,8 +26,8 @@
         </aside>
         <div id="container">
             <header>
-                <a href="login.html">Login</a>
-                <a href="register.html">Register</a>
+                <a href="login">Login</a>
+                <a href="register">Register</a>
                 <span>Welcome, Bob!</span>
                 <a href="#">[Logout]</a>
             </header>
