--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -15,21 +15,21 @@
             </div>
 
             <nav>
-                <a href="index.html">Main Page</a>
+                <a href="">Main Page</a>
                 <a href="all-articles.html">All Articles</a>
                 <form>
                     <input type="text">
                     <input type="submit" value="Search">
                 </form>
-                <a href="create.html">Create New Article</a>
+                <a href="create.ejs">Create New Article</a>
             </nav>
         </aside>
         <div id="container">
             <header>
-                <a href="login.html">Login</a>
-                <a href="register.html">Register</a>
+                <a href="users/login">Login</a>
+                <a href="users/register">Register</a>
                 <span>Welcome, Bob!</span>
-                <a href="#">[Logout]</a>
+                <!-- <a href="#">[Logout]</a> -->
             </header>
             <main>
                 <h1>Welcome to KingUni Wiki!</h1>
