--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,7 +27,7 @@
         <div id="container">
             <header>
                 <a href="login">Login</a>
-                <a href="users/register">Register</a>
+                <a href="register">Register</a>
                 <span>Welcome, Bob!</span>
                 <a href="#">[Logout]</a>
             </header>
