--- a/views/register.ejs
+++ b/views/register.ejs
@@ -28,7 +28,7 @@
             <header>
                 <a href="login">Login</a>
                 <a href="register">Register</a>
-                <span>Welcome, Bob!</span>
+                <span></span>
                 <a href="#">[Logout]</a>
             </header>
             <main>
@@ -37,15 +37,27 @@
 				<p>Both passwords should be the same...</p>
 				</section>
                 <section>
-                    <h2>Register</h2>
+                    <h2>Register for new account</h2>  <p>If already registered go to Login.</p>
                     <div class="spacer">
                         <form action="/users/register" method="POST">
                             <label>Email:</label>
-                            <input type="email" value="<%= typeof email != 'undefined' ? email : '' %>">
+                            <input type="email" 
+                                    id="email"
+                                    name="email"
+                                    placeholder="Enter Email"
+                                    value="<%= typeof email != 'undefined' ? email : '' %>">
                             <label>Password:</label>
-                            <input type="password" value="<%= typeof password != 'undefined' ? password : '' %>">
+                            <input type="password" 
+                                    id="password"
+                                    name="password"
+                                    placeholder="Create Password"
+                                    value="<%= typeof password != 'undefined' ? password : '' %>">
                             <label>Repeat password:</label>
-                            <input type="password" value="<%= typeof password != 'undefined' ? password : '' %>">
+                            <input type="password" 
+                                    id="password2"
+                                    name="password2"
+                                    placeholder="Confirm Password"
+                                    value="<%= typeof password2 != 'undefined' ? password2 : '' %>">
                             <input type="submit" value="Register">
                         </form>
                     </div>
