--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Wiki</title>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" 
+    crossorigin="anonymous">
     <link rel="stylesheet" href="/css/site.css">
 </head>
 
@@ -36,6 +39,7 @@
                 <section>
                     <h2>Login</h2>
                     <div class="spacer">
+                        <%- include ("./partials/messages") %>
                         <form action="/users/login" method="POST">
                             <label>Email:</label>
                             <input type="email">
@@ -51,6 +55,10 @@
             </footer>
         </div>
     </div>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" 
+integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" 
+integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
 </body>
 
 </html>
