--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,10 +41,16 @@
                     <div class="spacer">
                         <%- include ("./partials/messages") %>
                         <form action="/users/login" method="POST">
-                            <label>Email:</label>
-                            <input type="email">
-                            <label>Password:</label>
-                            <input type="password">
+                            <label for="email">Email:</label>
+                            <input type="email"
+                                    id="email"
+                                    name="email"
+                                    placeholder="Enter Email"/>
+                            <label for="password">Password:</label>
+                            <input type="password"
+                                    id="password"
+                                    name="password"
+                                    placeholder="Enter Password">
                             <input type="submit" value="Login">
                         </form>
                     </div>
