--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -28,7 +28,7 @@
             <header>
                 <!-- <a href="users/login">Login</a> -->
                 <!-- <a href="users/register">Register</a> -->
-                <span>Welcome, <%= user.name %></span>
+                <span>Welcome, <%= email %></span>
                 <a href="#">[Logout]</a>
             </header>
             <main>
