--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,8 +31,8 @@
             <header>
                 <a href="login">Login</a>
                 <a href="register">Register</a>
-                <span>Welcome, Bob!</span>
-                <a href="#">[Logout]</a>
+                <span></span>
+                
             </header>
             <main>
                 <h1>Welcome to KingUni Wiki!</h1>
