--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -29,7 +29,7 @@
                 <!-- <a href="users/login">Login</a> -->
                 <!-- <a href="users/register">Register</a> -->
                 <span>Welcome, <%= email %></span>
-                <a href="#">[Logout]</a>
+                <a href="users/login">[Logout]</a>
             </header>
             <main>
                 <h1>Welcome to KingUni Wiki!</h1>
