all articles link

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,7 +19,7 @@
 
             <nav>
                 <a href="/">Main Page</a>
-                <a href="all-articles.html">All Articles</a>
+                <a href="all-articles">All Articles</a>
                 <form>
                     <input type="text">
                     <input type="submit" value="Search">
