--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -15,8 +15,8 @@
             </div>
 
             <nav>
-                <a href="">Main Page</a>
-                <a href="all-articles.html">All Articles</a>
+                <a href="/">Main Page</a>
+                <a href="/all-articles">All Articles</a>
                 <form>
                     <input type="text">
                     <input type="submit" value="Search">
@@ -28,7 +28,7 @@
             <header>
                 <a href="users/login">Login</a>
                 <a href="users/register">Register</a>
-                <span>Welcome, Bob!</span>
+                <!-- <span>Welcome, Bob!</span> -->
                 <!-- <a href="#">[Logout]</a> -->
             </header>
             <main>
