--- a/views/all-articles.ejs
+++ b/views/all-articles.ejs
@@ -16,12 +16,12 @@
 
             <nav>
                 <a href="/">Main Page</a>
-                <a href="all-articles.html">All Articles</a>
+                <a href="all-articles">All Articles</a>
                 <form>
                     <input type="text">
                     <input type="submit" value="Search">
                 </form>
-                <a href="create.html">Create New Article</a>
+                <a href="create">Create New Article</a>
             </nav>
         </aside>
         <div id="container">
