--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,7 +24,7 @@
                     <input type="text">
                     <input type="submit" value="Search">
                 </form>
-                <a href="create.html">Create New Article</a>
+                <!-- <a href="create.html">Create New Article</a> -->
             </nav>
         </aside>
         <div id="container">
