--- a/views/create.ejs
+++ b/views/create.ejs
@@ -15,13 +15,13 @@
             </div>
 
             <nav>
-                <a href="index.html">Main Page</a>
-                <a href="all-articles.html">All Articles</a>
+                <a href="/">Main Page</a>
+                <a href="all-articles">All Articles</a>
                 <form>
                     <input type="text">
                     <input type="submit" value="Search">
                 </form>
-                <a href="create.html">Create New Article</a>
+                <!-- <a href="create">Create New Article</a> -->
             </nav>
         </aside>
         <div id="container">
@@ -39,7 +39,7 @@
                 <section>
                     <h2>Create new article</h2>
                     <div class="spacer">
-                        <form>
+                        <form action="/articles" method="POST">
                             <label>Article title</label>
                             <input type="text" class="title">
                             <label>Content</label>
