--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -21,7 +21,7 @@
                     <input type="text">
                     <input type="submit" value="Search">
                 </form>
-                <a href="create.ejs">Create New Article</a>
+                <!-- <a href="create.ejs">Create New Article</a> -->
             </nav>
         </aside>
         <div id="container">
